# receipt-reader

./: .gitignore  Taskfile.yml  main.py  pyproject.toml  rxconfig.py
receipt_reader/: models.py  receipt_reader.py  request_models.py  response_models.py  textract_process.py
temp/: convert.py  example.py  johann-testing.ipynb  process.py
tests/: test_response.py
