[project]
name = "receipt-reader"
version = "0.1.0"
description = "Parses receipt images."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.28",
    "click>=8.1.8",
    "pillow>=11.1.0",
    "reflex>=0.7.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.398",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length=100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN"]

[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
