[project]
name = "receipt-reader"
version = "0.1.0"
description = "Parses receipt images."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.28",
    "pillow>=11.1.0",
    "reflex>=0.7.4",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.0",
    "pre-commit>=4.2.0",
    "pyright>=1.1.398",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length=100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN"]
ignore = [
    "ANN401",  # Any as type
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb"  = [
    "F403", # import *
]


[tool.pyright]
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
